--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header>
-      <h1>Welcome to My Website!</h1>
+         <h1>Welcome to My Website!</h1>
         <nav>
-            <a href=index.html">Home</a>
-            <a href=about.html">About</a>
-            <a href=contact.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
