--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
   <meta name="viewport" content="width=device-width, intial scale=1.0">
  
   <title>About Me</title>
+ 
+  <link rel="stylesheet" hred="style.css">
 
 </head>
 <body>
