--- a/about.html
+++ b/about.html
@@ -9,9 +9,10 @@
   <meta name="viewport" content="width=device-width, intial scale=1.0">
  
   <title>About Me</title>
- 
+  <!-- Bootstrap CSS --> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
+  <!-- Custom CSS --> 
   <link rel="stylesheet" hred="style.css">
-
 </head>
 <body>
     <header>
@@ -35,6 +36,9 @@
       <p>&copy; 2026 Loreo Arona</p>
  
   </footer>
+ <!-- Bootstrap JS and dependencies --> 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
   
