--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
     <title>Contact Me</title>
-
+    <!-- Bootstrap CSS --> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
+    <!-- Custom CSS --> 
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -32,5 +34,8 @@
     <p>&copy; 2026 Loreo Arona</p>
   
   </footer>
+  <!-- Bootstrap JS and dependencies --> 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> 
 </body>
 </html>
