Enhance contact section with header and styled email link
Updated main section with a header and improved email link styling.

--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
         </div> 
     </nav> 
 </header> 
-  <main>
-    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:cse25-312@thuto.bac.ac.bw">cse25-312@thuto.bac.ac.bw</a>.</p>
+  <main class="container my-5">
+    <h2>Contact Me</h2> 
+    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:cse25-312@thuto.bac.ac.bw"class="btn btn-success">cse25-312@thuto.bac.ac.bw</a>.</p> 
   </main>
-
   <footer>
     
     <p>&copy; 2026 Loreo Arona</p>
