--- a/about.html
+++ b/about.html
@@ -38,16 +38,13 @@
         </div> 
     </nav> 
 </header>   
-  <main>
-      <p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
-     
-      <p>This is my first multi-page website, and i'm excited to share it with you!</p>
-  </main>
-  
-    
-  <footer>
- 
-      <p>&copy; 2026 Loreo Arona</p>
+ <main class="container my-5"> 
+    <h2>About Me</h2> 
+    <p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p> 
+    <p>This is my first multi-page website, and I'm excited to share it with you!</p> 
+</main>  
+ <footer>
+ <p>&copy; 2026 Loreo Arona</p>
  
   </footer>
  <!-- Bootstrap JS and dependencies --> 
